--- a/metadata.yaml
+++ b/metadata.yaml
@@ -34,5 +34,6 @@ subjects:
 - !lcsh 'Hygiene'
 - !lcc 'RA'
 - !lcsh 'Physical education and training'
+- GITenberg
 title: How to Add Ten Years to your Life and to Double Its Satisfactions
 url: http://www.gutenberg.org/ebooks/22005
